src/parser/snapshots/almond__parser__literal__tests__obj_lit-3.snap
---
source: src/parser/literal.rs
expression: "parse_literal(r#\"{}\"#.into()).unwrap().1"
---
{
  "type": "ObjectExpression",
  "properties": [],
  "start": 0,
  "end": 2
}
